force-app/main/default/objects/Pitch__c/Pitch__c.object-meta.xml
<CustomObject>
    <label>Pitch/Mandate Award</label>
    <nameField>
        <displayFormat>PMA-{0000000000}</displayFormat>
        <label>Pitch/Mandate Award ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Pitches/Mandate Awards</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>