force-app/main/default/objects/Pitch__c/fields/BackButtonURL__c.field-meta.xml
<CustomField>
    <fullName>BackButtonURL__c</fullName>
    <description>This formula field is used to capture the correct record ID based off whether or not the opportunity has been converted.</description>
    <formula>IF(
NOT(ISBLANK(Engagement__c)),
&quot;/apex/HL_EngagementView?id=&quot;+Engagement__c,
&quot;/apex/HL_OpportunityView?id=&quot;+Opportunity__c)</formula>
    <label>BackButtonURL</label>
    <type>Text</type>
</CustomField>