force-app/main/default/objects/Pitch__c/fields/DateOfPitch__c.field-meta.xml
<CustomField>
    <fullName>DateOfPitch__c</fullName>
    <label>Date of Pitch</label>
    <type>Date</type>
</CustomField>