force-app/main/default/objects/Pitch__c/fields/Engagement__c.field-meta.xml
<CustomField>
    <fullName>Engagement__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Engagement</label>
    <referenceTo>Engagement__c</referenceTo>
    <relationshipName>Pitches_Mandates</relationshipName>
    <type>Lookup</type>
</CustomField>