force-app/main/default/objects/Pitch__c/fields/FAAwardedRecordType__c.field-meta.xml
<CustomField>
    <fullName>FAAwardedRecordType__c</fullName>
    <description>Using this field for the FA Awarded Process Builder and any validation rules where it is required.</description>
    <formula>FAAwarded__r.RecordType.DeveloperName</formula>
    <label>FA Awarded Record Type</label>
    <type>Text</type>
</CustomField>