force-app/main/default/objects/Pitch__c/fields/LineOfBusiness__c.field-meta.xml
<CustomField>
    <fullName>LineOfBusiness__c</fullName>
    <label>Line of Business</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>FR</fullName>
                <default>true</default>
                <label>FR</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>