force-app/main/default/objects/Pitch__c/fields/NoFAAppointed__c.field-meta.xml
<CustomField>
    <fullName>NoFAAppointed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>No FA Appointed</label>
    <type>Checkbox</type>
</CustomField>