force-app/main/default/objects/Pitch__c/fields/Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Opportunity__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Opportunity</label>
    <referenceTo>Opportunity__c</referenceTo>
    <relationshipName>Pitches_Mandates</relationshipName>
    <type>Lookup</type>
</CustomField>