force-app/main/default/objects/Pitch__c/fields/RolePitched__c.field-meta.xml
<CustomField>
    <fullName>RolePitched__c</fullName>
    <label>Role Pitched</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>LineOfBusiness__c</controllingField>
        <restricted>true</restricted>
        <valueSetName>JobType</valueSetName>
    </valueSet>
</CustomField>