force-app/main/default/objects/Pitch__c/validationRules/ChangeEngagementNotAllowed.validationRule-meta.xml
<ValidationRule>
    <fullName>ChangeEngagementNotAllowed</fullName>
    <active>true</active>
    <description>Once the Engagement is populated on a Pitch/Mandate Record, only Admins can change the Opportunity.</description>
    <errorConditionFormula>$User.ProfileId &lt;&gt; &apos;00ei00000016T4B&apos; &amp;&amp;
ISCHANGED(Engagement__c) &amp;&amp;
NOT(ISBLANK(Engagement__c)) &amp;&amp;
Opportunity__c &lt;&gt; Engagement__r.Opportunity__c</errorConditionFormula>
    <errorMessage>An Engagement can&apos;t be added if it doesn&apos;t match its related Opportunity or the Opportunity field is empty.  Once the Engagement is populated, it cannot be changed.  Please contact your Salesforce Administrator for assistance.</errorMessage>
</ValidationRule>