force-app/main/default/objects/Pitch__c/validationRules/ChangeOpportunityNotAllowed.validationRule-meta.xml
<ValidationRule>
    <fullName>ChangeOpportunityNotAllowed</fullName>
    <active>true</active>
    <description>Once the Opportunity is populated on a Pitch/Mandate Record, only Admins can change the Opportunity.</description>
    <errorConditionFormula>$User.ProfileId  &lt;&gt; &apos;00ei00000016T4B&apos; &amp;&amp;
NOT(ISBLANK(Opportunity__c)) &amp;&amp;
ISCHANGED(Opportunity__c)</errorConditionFormula>
    <errorMessage>The Opportunity cannot be change, please contact your Administrator.</errorMessage>
</ValidationRule>