force-app/main/default/objects/Pitch__c/validationRules/notAllowFAAwardedNoFAOutcome.validationRule-meta.xml
<ValidationRule>
    <fullName>notAllowFAAwardedNoFAOutcome</fullName>
    <active>true</active>
    <description>If the Pitch Outcome is option 4,5, or 6 this validation enforces that both FA Awarded is populated AND No FA Appointed are not populated.</description>
    <errorConditionFormula>(TEXT(PitchOutcome__c) = &quot;HL Lost competitive pitch&quot; ||
TEXT(PitchOutcome__c) = &quot;HL Did not pitch - conflicted&quot; ||
TEXT(PitchOutcome__c) = &quot;HL Not invited to pitch&quot;) &amp;&amp;
NOT(ISBLANK(FAAwarded__c)) &amp;&amp;
NoFAAppointed__c = TRUE</errorConditionFormula>
    <errorMessage>HL Lost Pitch Indicated. Update No FA Appointed or FA Awarded Company. No FA Appointed AND FA Awarded can NOT be populated at the same time.</errorMessage>
</ValidationRule>