force-app/main/default/objects/Pitch__c/validationRules/requireFAAwardedOutcome.validationRule-meta.xml
<ValidationRule>
    <fullName>requireFAAwardedOutcome</fullName>
    <active>true</active>
    <description>If the Pitch Outcome is option 1, 2 or 3, this validation enforces that either FA Awarded is populated (Can NOT be a Houlihan Company) or No FA Appointed is checked.</description>
    <errorConditionFormula>(TEXT(PitchOutcome__c) = &quot;HL Lost competitive pitch&quot; ||
TEXT(PitchOutcome__c) = &quot;HL Did not pitch - conflicted&quot; ||
TEXT(PitchOutcome__c) = &quot;HL Not invited to pitch&quot;) &amp;&amp;
(NoFAAppointed__c = FALSE &amp;&amp;
(ISBLANK(FAAwarded__c) ||
(NOT(ISBLANK(FAAwarded__c)) &amp;&amp;
FAAwarded__r.RecordType.DeveloperName = &apos;Houlihan_Company&apos;)))</errorConditionFormula>
    <errorMessage>HL Lost Pitch Indicated. Update No FA Appointed or FA Awarded Company.</errorMessage>
</ValidationRule>